--- a/index.html
+++ b/index.html
@@ -163,46 +163,65 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 17.11.2025</b>
-        <p>10:15:</p>
+        <b>Расписание на 18.11.2025</b>
+        <p>6:30:</p>
+        <p>- Дом забытых вещей</p>
+        <p>6:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:35:</p>
+        <p>7:20:</p>
         <p>- К/ф Черепаха</p>
-        <p>С 11:00:</p>
+        <p>С 7:30:</p>
         <p>- Фильм Чудеса случаются</p>
         <p>- К/Ф Страйдер</p>
         <p>- К/Ф Семейная связь</p>
         <p>- Импульс - шаг в будущее</p>
         <p>- К/Ф Беседа</p>
         <p>- К/Ф Скейт</p>
-        <p>12:25:</p>
+        <p>8:55:</p>
         <p>- К/Ф ЭГО</p>
-        <p>12:45:</p>
+        <p>9:15:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:00:</p>
+        <p>9:30:</p>
         <p>- К/Ф Карачун</p>
-        <p>13:25:</p>
+        <p>9:55:</p>
         <p>- Дом забытых вещей</p>
-        <p>15:25:</p>
+        <p>С 10:10:</p>
+        <p>- Фильм Чудеса случаются</p>
+        <p>- К/Ф Страйдер</p>
+        <p>- К/Ф Семейная связь</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>- К/Ф Беседа</p>
+        <p>- К/Ф Скейт</p>
+        <p>11:55:</p>
         <p>- Семейная связь</p>
-        <p>16:15:</p>
+        <p>12:45:</p>
         <p>- К/ф Черепаха</p>
-        <p>18:15:</p>
+        <p>14:45:</p>
         <p>- К/Ф ЭГО</p>
-        <p>18:40:</p>
+        <p>15:10:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:00:</p>
+        <p>15:30:</p>
         <p>- К/Ф Карачун</p>
-        <p>19:20:</p>
+        <p>15:50:</p>
         <p>- Дом забытых вещей</p>
-        <p>19:35:</p>
+        <p>16:05:</p>
         <p>- К/ф Черепаха</p>
-        <p>С 20:00:</p>
-        <p>Продолжение вещания</p>
-        <p>22:10:</p>
+        <p>16:50:</p>
+        <p>-К/ф Страйдер (18+)</p>
+        <p>17:00:</p>
+        <p>-К/ф Страйдер 2 (18+)</p>
+        <p>18:50:</p>
+        <p>- Там, где море встречается с морем</p>
+        <p>19:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>23:50:</p>
+        <p>20:40:</p>
         <p>- К/ф Беседа</p>
+        <p>21:40:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>21:55:</p>
+        <p>- Короткометражный фильм Семейная связь</p>
+        <p>С 22:10:</p>
+        <p>Продолжение вещания</p>
 
 
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
