--- a/index.html
+++ b/index.html
@@ -163,60 +163,60 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 03.12.2025</b>
-        <p>7:35:</p>
+        <b>Расписание на 04.12.2025</b>
+        <p>8:00:</p>
+        <p>- Дом забытых вещей</p>
+        <p>8:15:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>8:35:</p>
         <p>- К/ф Черепаха</p>
-        <p>С 8:00:</p>
+        <p>С 9:00:</p>
         <p>- Фильм Чудеса случаются</p>
         <p>- К/Ф Страйдер</p>
         <p>- К/Ф Семейная связь</p>
         <p>- Импульс - шаг в будущее</p>
         <p>- К/Ф Беседа</p>
         <p>- К/Ф Скейт</p>
-        <p>9:25:</p>
-        <p>- К/Ф ЭГО</p>
-        <p>9:45:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:00:</p>
-        <p>- К/Ф Карачун</p>
         <p>10:25:</p>
+        <p>- К/Ф ЭГО</p>
+        <p>10:45:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>11:00:</p>
+        <p>- К/Ф Карачун</p>
+        <p>11:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>С 10:40:</p>
+        <p>С 11:40:</p>
         <p>- Фильм Чудеса случаются</p>
         <p>- К/Ф Страйдер</p>
         <p>- К/Ф Семейная связь</p>
         <p>- Импульс - шаг в будущее</p>
         <p>- К/Ф Беседа</p>
         <p>- К/Ф Скейт</p>
-        <p>12:25:</p>
+        <p>13:25:</p>
         <p>- Семейная связь</p>
-        <p>13:15:</p>
+        <p>14:15:</p>
         <p>- К/ф Черепаха</p>
-        <p>15:15:</p>
+        <p>16:15:</p>
         <p>- К/Ф ЭГО</p>
-        <p>15:40:</p>
+        <p>16:40:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>16:00:</p>
+        <p>17:00:</p>
         <p>- К/Ф Карачун</p>
-        <p>16:20:</p>
-        <p>- Дом забытых вещей</p>
-        <p>16:35:</p>
-        <p>- К/ф Черепаха</p>
         <p>17:20:</p>
-        <p>-К/ф Страйдер (18+)</p>
-        <p>17:30:</p>
-        <p>-К/ф Страйдер 2 (18+)</p>
-        <p>19:20:</p>
-        <p>- Там, где море встречается с морем <mark>ПО СУББОТАМ</mark></p>
-        <p>19:55:</p>
         <p>- Дом забытых вещей</p>
-        <p>21:10:</p>
+        <p>17:35:</p>
+        <p>- К/ф Черепаха</p>
+        <p>С 18:00:</p>
+        <p>Продолжение вещания</p>
+        <p>20:10:</p>
+        <p>- Дом забытых вещей</p>
+        <p>21:50:</p>
         <p>- К/ф Беседа</p>
-        <p>22:10:</p>
+        <p>22:36:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:25:</p>
+        <p>23:15:</p>
         <p>- Короткометражный фильм Семейная связь</p>
-        <p>С 22:40:</p>
+        <p>С 23:30:</p>
         <p>Продолжение вещания</p>
 
 
