--- a/livetv.html
+++ b/livetv.html
@@ -158,11 +158,20 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание 06.12.2025</b>
+        <b>Расписание 08.12.2025</b>
         <p>8:00:</p>
         <p>- Дом забытых вещей</p>
+        <p>8:15:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>8:35:</p>
         <p>- К/ф Черепаха</p>
+        <p>С 9:00:</p>
+        <p>- Фильм Чудеса случаются</p>
+        <p>- К/Ф Страйдер</p>
+        <p>- К/Ф Семейная связь</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>- К/Ф Беседа</p>
+        <p>- К/Ф Скейт</p>
         <p>10:25:</p>
         <p>- К/Ф ЭГО</p>
         <p>10:45:</p>
@@ -192,21 +201,17 @@ window.onclick = function(event) {
         <p>- Дом забытых вещей</p>
         <p>17:35:</p>
         <p>- К/ф Черепаха</p>
-        <p>18:20:</p>
-        <p>-К/ф Страйдер (18+)</p>
-        <p>18:30:</p>
-        <p>-К/ф Страйдер 2 (18+)</p>
-        <p>20:20:</p>
-        <p>- Там, где море встречается с морем <mark>ПО СУББОТАМ</mark></p>
-        <p>20:55:</p>
+        <p>С 18:00:</p>
+        <p>Продолжение вещания</p>
+        <p>20:10:</p>
         <p>- Дом забытых вещей</p>
-        <p>22:10:</p>
+        <p>21:50:</p>
         <p>- К/ф Беседа</p>
-        <p>23:10:</p>
+        <p>22:36:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>23:25:</p>
+        <p>23:15:</p>
         <p>- Короткометражный фильм Семейная связь</p>
-        <p>С 23:40:</p>
+        <p>С 23:30:</p>
         <p>Продолжение вещания</p>
 
    </div>
