--- a/index.html
+++ b/index.html
@@ -163,54 +163,56 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание 30.12.2025</b>
-        <p>8:00:</p>
+        <b>Расписание 31.12.2025</b>
+        <p>15:00:</p>
         <p>- Дом забытых вещей</p>
-        <p>8:15:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>8:35:</p>
+        <p>15:31:</p>
         <p>- К/ф Черепаха</p>
-        <p>10:25:</p>
+        <p>17:18:</p>
         <p>- К/Ф ЭГО</p>
-        <p>10:45:</p>
+        <p>17:40:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:00:</p>
+        <p>18:00:</p>
         <p>- К/Ф Карачун</p>
-        <p>11:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>С 11:40:</p>
+        <p>18:37:</p>
+        <p>- Аука (18+)</p>
+        <p>18:50:</p>
         <p>- Фильм Чудеса случаются</p>
-        <p>- К/Ф Страйдер</p>
-        <p>- К/Ф Семейная связь</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>- К/Ф Беседа</p>
-        <p>- К/Ф Скейт</p>
-        <p>13:25:</p>
+        <p>19:00:</p>
+        <p>- Страйдер (18+)</p>
+        <p>19:10:</p>
+        <p>- Страйдер-2 (18+)</p>
+        <p>19:26:</p>
+        <p>- К/ф ПОМНИ!</p>
+        <p>19:50:</p>
+        <p>- К/ф Черепаха</p>
+        <p>21:14:</p>
         <p>- Семейная связь</p>
-        <p>14:15:</p>
+        <p>22:03:</p>
+        <p>- Реальность полёта</p>
+        <p>22:45:</p>
         <p>- К/ф Черепаха</p>
-        <p>16:15:</p>
-        <p>- К/Ф ЭГО</p>
-        <p>16:40:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:00:</p>
-        <p>- К/Ф Карачун</p>
-        <p>17:20:</p>
+        <p>23:10:</p>
+        <p>- Скейт</p>
+        <p>23:45:</p>
         <p>- Дом забытых вещей</p>
-        <p>17:35:</p>
+        <p>23:56:</p>
+        <p>- Новогоднее обращение Президента Российской Федерации</p>
+        <b>01.01.2026 Новый год</b>
+        <p>00:00:</p>
+        <p>- Куранты</p>
+        <p>00:04:</p>
         <p>- К/ф Черепаха</p>
-        <p>С 18:00:</p>
-        <p>Продолжение вещания</p>
-        <p>20:10:</p>
-        <p>- Дом забытых вещей</p>
-        <p>21:50:</p>
-        <p>- К/ф Беседа</p>
-        <p>22:36:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>23:15:</p>
-        <p>- Короткометражный фильм Семейная связь</p>
-        <p>С 23:30:</p>
-        <p>Продолжение вещания</p>
+        <p>00:30:</p>
+        <p>- Чудеса случаются</p>
+        <p>00:40:</p>
+        <p>- Семейная связь</p>
+        <p>00:56:</p>
+        <p>- К/ф ПОМНИ!</p>
+        <p>01:06:</p>
+        <p>- Аука (18+)</p>
+        <p>00:18:</p>
+        <p>- Продолжение вещания</p>
 
 
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
