--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="yandex-verification" content="d6393e3431b0c435" />
-	<title>«Райка and Лайка» - интернет-телеканал</title>
+	<title>Райка and Лайка – интернет-телеканал</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -163,19 +163,58 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание 31.12.2025</b>
-        <p>15:00:</p>
+        <b>Расписание 02.01.2026</b>
+        <p>10:00:</p>
         <p>- Дом забытых вещей</p>
-        <p>15:31:</p>
+        <p>10:31:</p>
         <p>- К/ф Черепаха</p>
-        <p>17:18:</p>
+        <p>10:55:</p>
+        <p>- Чудеса случаются</p>
+        <p>12:20:</p>
         <p>- К/Ф ЭГО</p>
-        <p>17:40:</p>
+        <p>12:45:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>18:00:</p>
+        <p>13:00:</p>
         <p>- К/Ф Карачун</p>
-        <p>18:37:</p>
+        <p>13:30:</p>
+        <p>- Дом забытых вещей</p>
+        <p>13:40:</p>
         <p>- Аука (18+)</p>
+        <p>14:30:</p>
+        <p>- К/ф ПОМНИ!</p>
+        <p>14:50:</p>
+        <p>- К/ф Черепаха</p>
+        <p>16:55:</p>
+        <p>- К/ф Беседа</p>
+        <p>17:05:</p>
+        <p>- Реальность полёта</p>
+        <p>17:48:</p>
+        <p>- К/ф Черепаха</p>
+        <p>18:26:</p>
+        <p>- Страйдер (18+)</p>
+        <p>18:36:</p>
+        <p>- Страйдер-2 (18+)</p>
+        <p>19:35:</p>
+        <p>- Семейная связь</p>
+        <p>19:51:</p>
+        <p>- К/ф ПОМНИ!</p>
+        <p>20:00:</p>
+        <p>- Аука (18+)</p>
+        <p>20:15:</p>
+        <p>- Реальность полёта</p>
+        <p>20:55:</p>
+        <p>- К/ф ПОМНИ!</p>
+        <p>21:10:</p>
+        <p>- К/ф ЭГО</p>
+        <p>21:35:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>21:55:</p>
+        <p>- К/Ф Карачун</p>
+        <p>22:33:</p>
+        <p>- К/Ф Черепаха</p>
+        <p>23:00:</p>
+        <p>- К/Ф Скейт</p>
+
         <p>18:50:</p>
         <p>- Фильм Чудеса случаются</p>
         <p>19:00:</p>
@@ -211,7 +250,7 @@ window.onclick = function(event) {
         <p>- К/ф ПОМНИ!</p>
         <p>01:06:</p>
         <p>- Аука (18+)</p>
-        <p>00:18:</p>
+        <p>01:18:</p>
         <p>- Продолжение вещания</p>
 
 
