--- a/livetv.html
+++ b/livetv.html
@@ -158,56 +158,57 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание 31.12.2025</b>
-        <p>15:00:</p>
+        <b>Расписание 02.01.2026</b>
+        <p>10:00:</p>
         <p>- Дом забытых вещей</p>
-        <p>15:31:</p>
+        <p>10:31:</p>
         <p>- К/ф Черепаха</p>
-        <p>17:18:</p>
-        <p>- К/Ф ЭГО</p>
-        <p>17:40:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>18:00:</p>
-        <p>- К/Ф Карачун</p>
-        <p>18:37:</p>
-        <p>- Аука (18+)</p>
-        <p>18:50:</p>
-        <p>- Фильм Чудеса случаются</p>
-        <p>19:00:</p>
-        <p>- Страйдер (18+)</p>
-        <p>19:10:</p>
-        <p>- Страйдер-2 (18+)</p>
-        <p>19:26:</p>
-        <p>- К/ф ПОМНИ!</p>
-        <p>19:50:</p>
-        <p>- К/ф Черепаха</p>
-        <p>21:14:</p>
-        <p>- Семейная связь</p>
-        <p>22:03:</p>
-        <p>- Реальность полёта</p>
-        <p>22:45:</p>
-        <p>- К/ф Черепаха</p>
-        <p>23:10:</p>
-        <p>- Скейт</p>
-        <p>23:45:</p>
-        <p>- Дом забытых вещей</p>
-        <p>23:56:</p>
-        <p>- Новогоднее обращение Президента Российской Федерации</p>
-        <b>01.01.2026 Новый год</b>
-        <p>00:00:</p>
-        <p>- Куранты</p>
-        <p>00:04:</p>
-        <p>- К/ф Черепаха</p>
-        <p>00:30:</p>
+        <p>10:55:</p>
         <p>- Чудеса случаются</p>
-        <p>00:40:</p>
-        <p>- Семейная связь</p>
-        <p>00:56:</p>
-        <p>- К/ф ПОМНИ!</p>
-        <p>01:06:</p>
+        <p>12:20:</p>
+        <p>- К/Ф ЭГО</p>
+        <p>12:45:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>13:00:</p>
+        <p>- К/Ф Карачун</p>
+        <p>13:30:</p>
+        <p>- Дом забытых вещей</p>
+        <p>13:40:</p>
         <p>- Аука (18+)</p>
-        <p>00:18:</p>
-        <p>- Продолжение вещания</p>
+        <p>14:30:</p>
+        <p>- К/ф ПОМНИ!</p>
+        <p>14:50:</p>
+        <p>- К/ф Черепаха</p>
+        <p>16:55:</p>
+        <p>- К/ф Беседа</p>
+        <p>17:05:</p>
+        <p>- Реальность полёта</p>
+        <p>17:48:</p>
+        <p>- К/ф Черепаха</p>
+        <p>18:26:</p>
+        <p>- Страйдер (18+)</p>
+        <p>18:36:</p>
+        <p>- Страйдер-2 (18+)</p>
+        <p>19:35:</p>
+        <p>- Семейная связь</p>
+        <p>19:51:</p>
+        <p>- К/ф ПОМНИ!</p>
+        <p>20:00:</p>
+        <p>- Аука (18+)</p>
+        <p>20:15:</p>
+        <p>- Реальность полёта</p>
+        <p>20:55:</p>
+        <p>- К/ф ПОМНИ!</p>
+        <p>21:10:</p>
+        <p>- К/ф ЭГО</p>
+        <p>21:35:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>21:55:</p>
+        <p>- К/Ф Карачун</p>
+        <p>22:33:</p>
+        <p>- К/Ф Черепаха</p>
+        <p>23:00:</p>
+        <p>- К/Ф Скейт</p>
 
    </div>
 </div>
