--- a/politica.html
+++ b/politica.html
@@ -23,7 +23,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="yandex-verification" content="d6393e3431b0c435" />
-	<title>"Райка and Лайка" - телеканал - Политика в отношении обработки персональных данных</title>
+	<title>Райка интернет-телеканал - Политика в отношении обработки персональных данных</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -139,7 +139,7 @@ window.onclick = function(event) {
       Ср 13 Декабрь 2023
     </time>
     <address class="vcard author">
-      By           <a class="url fn" href="/author/rayka-and-layka-tv.html">Rayka-and-Layka-tv</a>
+      By           <a class="url fn" href="/author/rayka-tv.html">Rayka-tv</a>
     </address>
     <div class="category">
         Category: <a href="/category/misc.html">misc</a>
@@ -244,13 +244,9 @@ window.onclick = function(event) {
 </body>
 	<div class="podval">
 		<div class="title2">
-			<!-- <p>Реквизиты для финансовой помощи</p> -->
-	<!-- 		<p>Номер карты Юмани:</p>
-			<p>5106 2180 3937 8336</p> -->
 		</div>
 			<iframe class="ya" src="https://yandex.ru/sprav/widget/rating-badge/231632381437?type=rating&theme=dark" width="300" height="50" frameborder="0"></iframe>
 		<div class="title2"><p>Редакция: red@ral-tv.ru</p>
-			<p>По всем вопросам: rayka_and_layka-tv@ro.ru</p>
 		</div>
 		<div class="footer2">
 		     <div class="sob">
