--- a/index.html
+++ b/index.html
@@ -165,57 +165,61 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание 29.01.2026</b>
+        <b>Расписание 04.02.2026</b>
         <p>8:00:</p>
         <p>- Дом забытых вещей</p>
-        <p>8:31:</p>
+        <p>8:15:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>8:35:</p>
         <p>- К/ф Черепаха</p>
-        <p>8:55:</p>
-        <p>- Чудеса случаются</p>
-        <p>10:20:</p>
+        <p>С 9:00:</p>
+        <p>- Фильм Чудеса случаются</p>
+        <p>- К/Ф Страйдер</p>
+        <p>- К/Ф Семейная связь</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>- К/Ф Беседа</p>
+        <p>- К/Ф Скейт</p>
+        <p>10:25:</p>
         <p>- К/Ф ЭГО</p>
         <p>10:45:</p>
         <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>11:00:</p>
         <p>- К/Ф Карачун</p>
-        <p>11:30:</p>
+        <p>11:25:</p>
         <p>- Дом забытых вещей</p>
-        <p>11:40:</p>
-        <p>- Аука (18+)</p>
-        <p>12:30:</p>
-        <p>- К/ф ПОМНИ!</p>
-        <p>12:50:</p>
-        <p>- К/ф Черепаха</p>
-        <p>14:55:</p>
-        <p>- К/ф Беседа</p>
-        <p>15:05:</p>
-        <p>- Реальность полёта</p>
-        <p>15:48:</p>
-        <p>- К/ф Черепаха</p>
-        <p>16:26:</p>
-        <p>- Страйдер (18+)</p>
-        <p>16:36:</p>
-        <p>- Страйдер-2 (18+)</p>
-        <p>17:35:</p>
-        <p>- Семейная связь</p>
-        <p>17:51:</p>
-        <p>- К/ф ПОМНИ!</p>
-        <p>18:00:</p>
-        <p>- Аука (18+)</p>
-        <p>18:15:</p>
-        <p>- Реальность полёта</p>
-        <p>18:55:</p>
-        <p>- К/ф ПОМНИ!</p>
-        <p>19:10:</p>
-        <p>- К/ф ЭГО</p>
-        <p>19:35:</p>
-        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:55:</p>
-        <p>- К/Ф Карачун</p>
-        <p>20:33:</p>
-        <p>- К/Ф Черепаха</p>
-        <p>21:00:</p>
+        <p>С 11:40:</p>
+        <p>- Фильм Чудеса случаются</p>
+        <p>- К/Ф Страйдер</p>
+        <p>- К/Ф Семейная связь</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>- К/Ф Беседа</p>
         <p>- К/Ф Скейт</p>
+        <p>13:25:</p>
+        <p>- Семейная связь</p>
+        <p>14:15:</p>
+        <p>- К/ф Черепаха</p>
+        <p>16:15:</p>
+        <p>- К/Ф ЭГО</p>
+        <p>16:40:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>17:00:</p>
+        <p>- К/Ф Карачун</p>
+        <p>17:20:</p>
+        <p>- Дом забытых вещей</p>
+        <p>17:35:</p>
+        <p>- К/ф Черепаха</p>
+        <p>С 18:00:</p>
+        <p>Продолжение вещания</p>
+        <p>20:10:</p>
+        <p>- Дом забытых вещей</p>
+        <p>21:50:</p>
+        <p>- К/ф Беседа</p>
+        <p>22:36:</p>
+        <p>- ВЕЛОМАРШРУТ - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>23:15:</p>
+        <p>- Короткометражный фильм Семейная связь</p>
+        <p>С 23:30:</p>
+        <p>Продолжение вещания</p>
 
 
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
